fixed about page overlap

--- a/src/scss/components/about.scss
+++ b/src/scss/components/about.scss
@@ -1,6 +1,7 @@
 
 .about-page {
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   width: 100vw;  
   color: white;  
   font-size: 2.2rem;  
